--- a/_posts/2017-08-28-runloop.md
+++ b/_posts/2017-08-28-runloop.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "Runloop 装波逼"
-subtitle:   " \"用操作系统原理告诉我们的挂起和等待来考虑runloop\""
+subtitle:   " \"用操作系统原理来考虑runloop\""
 date:       2017-08-28 16:00:00
 author:     "Hoony"
 header-img: "img/post-bg-runloop.jpg"
@@ -11,3 +11,25 @@ tags:
 ---
 
 > “操作系统的CPU运行其实在莫些层面上与iOS的runloop相当相似”
+
+## 操作系统
+不管是在进行CPU运算的时候 还是GPU运行的时候有一个概念都是存在的----“时间片”
+<br>在CPU中时间片是为了做诸如“同步操作”等
+
+## Runloop目的在哪
+程序在逻辑上是一个线性的结构从头到尾，从开始到结束。也就是说从你开机的那一瞬间开始程序就开始了，如果没有一个无限接近于死循环的东西来保证你的电脑一直在进行一个程序运行的话那么就会变成一个直条装的逻辑。说的直白些就是：
+<br>一个工厂它有100个工人。
+<br>但是工厂第一批订单做完了，但是可能在最近两天内暂时没有订单可以做。
+<br>但是工厂不能就这样把人员全部开除掉。
+<br>那么就要莫放假要么就发工资叫他们来坐。(很显然我们是要让他们放假的。)
+<br>这其实就是挂起状态，CPU也不再需要想基础状态那样进行消耗。
+<br>这种状态会一直持续到新的订单（事件 、 消息）来的时候。
+
+![img](/img/in-post/post-runloop/runloop-runloopStruct.png)
+> 在__runloop的结构体中是存在一个名为_commonModes的Set的（当然类型是CFMutableSetRef类型，但不妨碍我们理解这个东西的性质和功能）
+
+![img](/img/in-post/post-runloop/runloop-Source-version.png)
+> emmmmm 看来这个version真的是用来判断这个Source的类型的0表示source0 1表示source1 _(:з」∠)_
+
+好文章好难写啊 我得慢慢写 持续更新。。。
+
