--- a/_posts/2017-08-28-runloop.md
+++ b/_posts/2017-08-28-runloop.md
@@ -29,7 +29,223 @@ tags:
 > 在__runloop的结构体中是存在一个名为_commonModes的Set的（当然类型是CFMutableSetRef类型，但不妨碍我们理解这个东西的性质和功能）
 
 ![img](/img/in-post/post-runloop/runloop-Source-version.png)
-> emmmmm 看来这个version真的是用来判断这个Source的类型的0表示source0 1表示source1 _(:з」∠)_
+> emmmmm 看来这个version真的是用来判断这个Source的类型的0表示source0 1表示source1 <br>\_(:з」∠)\_
+
+![img](/img/in-post/post-runloop/runloop-CFRuntimeBase.png)
+> 在看源码的时候，我们会发现在不管哪一个结构体前面都有一个这个东西，而且在进行判断诸如“runloopdealloc判断”之类的东西的时候，也是讲runloop指针直接强转为这种类型进行判断的，我就找到了这个结构体。并且我把注释放上来了。
+<br>注释主要意思就是这个结构体是所有CF示例的开头。但是你永远不要直接引用这些参数，因为这是为CF服务的，而且可能会被添加、修改甚至删除且不会对你发出警告。巴拉巴拉...
+<br>总之扯这么多思路就两个
+--
+<br>这个东西是开头
+<br>这个东西不要用、不稳定。
+
+![img](/img/in-post/post-runloop/runloop-commonModeAdd.png)
+<br>![img](/img/in-post/post-runloop/runloop-AddItems.png)
+> 我自己手写了一些注释帮助理解，在这里我们可以发现在runloop结构体中的commonModes中维护了一个mode名称列表。在添加的逻辑上是将commonItem中的东西都添加到目标Mode中，至于mode中的item的存储那是在后续操作中进行的。
+
+# CFRunlop相关联的结构体解析
+<pre>
+<code>struct __CFRunLoop
+{
+	头、锁、标示、重置所用信息
+	struct _block_item *_blocks_head;
+	struct _block_item *_blocks_tail;
+	CFAbsoluteTime _runTime;
+	CFAbsoluteTime _sleepTime;
+	CFTypeRef _counterpart;
+   -------------------------↑目前不在考虑范围-------------------------------
+	__CFPort _wakeUpPort;					// 用于唤醒的Port        [还没开始研究这个点]
+	pthread_t _pthread;						// 对应的线程            [还没开始研究这个点]
+	uint32_t _winthread;					// windowsThreadID?    [还没开始研究这个点] 
+	CFMutableSetRef _commonModes;			// 用于储存标志为common的modeName
+	CFMutableSetRef _commonModeItems;		// 用于在添加common时进行item的放置
+	CFRunLoopModeRef _currentMode;			// 当前Mode
+	CFMutableSetRef _modes;					// 当前mode列表
+};</code>
+</pre>
+
+#### runloop主题
+* runloop主题和线程有对应关系。
+* 并且保存有多个mode
+* 但是只能存在一个当前mode
+* 但是有commonModes存在，但在实现中并不是这些mode都在运行，而是这些mode的资源都存在于当前的那个mode中。这个在后续的代码分析会进行详细讨论。
+
+*********
+
+<pre>
+<code>struct __CFRunLoopMode {
+	CFRuntimeBase _base;    // 头
+	pthread_mutex_t _lock;	/* must have the run loop locked before locking this   */
+	char _padding[3];
+	CFIndex _observerMask;
+#if DEPLOYMENT_TARGET_WINDOWS
+    DWORD _msgQMask;
+    void (*_msgPump)(void);
+#endif
+    uint64_t _timerSoftDeadline; /* TSR */
+    uint64_t _timerHardDeadline; /* TSR */
+#if USE_DISPATCH_SOURCE_FOR_TIMERS // 暂时和iOS还是没关系的
+    dispatch_source_t _timerSource;
+    dispatch_queue_t _queue;
+    Boolean _timerFired; // set to true by the source when a timer has fired
+    Boolean _dispatchTimerArmed;
+#endif
+   -------------------------↑目前不在考虑范围-------------------------------
+	CFStringRef _name;  					// mode的name 在存储的时候大多都是存储这个参数 如：commonModes中
+	Boolean _stopped;						// 标志mode状态是否是停止的
+	-----------------------------↓资源集合---------------------------------
+	CFMutableSetRef _sources0;				// source0 <App内部事件>集合
+	CFMutableSetRef _sources1;				// source1 <由machPort 启动>集合
+	CFMutableArrayRef _observers;			// observer 集合
+	CFMutableArrayRef _timers;				// timer 集合
+	// key：__CFPort value:CFRunloopSourceRef
+	CFMutableDictionaryRef _portToV1SourceMap;  
+    __CFPortSet _portSet;					// __CFPort 集合
+	--------------------------------↑-------------------------------------
+#if USE_MK_TIMER_TOO
+    mach_port_t _timerPort;
+    Boolean _mkTimerArmed;
+#endif
+};</code>
+</pre>
+
+####mode类型
+* mode的主要储存依据是_name,所以在逻辑上要保证不同的mode不重名。
+* 资源上主要有source (两种) observer timer 以及和source存在关联的port
+* kCFRunLoopDefaultMode 是一个系统默认的mode
+* 奇怪的是为什么kCFRunLoopCommonModes也是一个字符串 让我感觉这也是个mode其实并不是
+* 但是在网传的dispatch上好像在iOS系统中 是没有关联的但是在MacOSX 确是有关联的，可能和版本有关系。
+* 与mach_port 是不管iOS还是MacOSX都是有关联的，在这一点上不是很理解，难道iOS也有进程通讯吗？
+* 连带着portlist 也就不是很懂了。
+
+*********
+
+<pre>
+<code>struct __CFRunLoopSource 
+{
+    CFRuntimeBase _base;
+    CFIndex _order;			/* immutable */
+    -------------------------↑目前不在考虑范围-------------------------------
+    pthread_mutex_t _lock;					// 一把锁
+    CFMutableBagRef _runLoops;				// 一个source可以被添加到多个runloop中
+    uint32_t _bits;							//用来标示source状态的
+    union 
+    {
+		CFRunLoopSourceContext version0;	/* immutable, except invalidation */
+    	CFRunLoopSourceContext1 version1;	/* immutable, except invalidation */
+    } _context;								// 这是一个union类型，也就是指这个地方只能存在一种source类型 要莫是0 要莫是1 两者互相替换
+};
+
+// source0 类型
+typedef struct {
+    CFIndex	version;											//在结构中真正在判断struct类型的标签
+    void *	info;
+    const void *(*retain)(const void *info);
+    void	(*release)(const void *info);
+    CFStringRef	(*copyDescription)(const void *info);
+    Boolean	(*equal)(const void *info1, const void *info2);
+    CFHashCode	(*hash)(const void *info);
+    -----------------↑通用者两种类型的source中都存在的参数----------------------
+    void	(*schedule)(void *info, CFRunLoopRef rl, CFRunLoopMode mode);
+    void	(*cancel)(void *info, CFRunLoopRef rl, CFRunLoopMode mode);
+    void	(*perform)(void *info);
+} CFRunLoopSourceContext;
+
+// source1 类型
+typedef struct {
+    CFIndex	version;
+    void *	info;
+    const void *(*retain)(const void *info);
+    void	(*release)(const void *info);
+    CFStringRef	(*copyDescription)(const void *info);
+    Boolean	(*equal)(const void *info1, const void *info2);
+    CFHashCode	(*hash)(const void *info);
+    -----------------↑通用者两种类型的source中都存在的参数----------------------
+#if (TARGET_OS_MAC && !(TARGET_OS_EMBEDDED || TARGET_OS_IPHONE)) || (TARGET_OS_EMBEDDED || TARGET_OS_IPHONE)
+    mach_port_t	(*getPort)(void *info);
+    void *	(*perform)(void *msg, CFIndex size, CFAllocatorRef allocator, void *info);
+#else
+    void *	(*getPort)(void *info);
+    void	(*perform)(void *info);
+#endif
+} CFRunLoopSourceContext1;</code>
+</pre>
+####source类型
+* 主体结构是相同的，因为source0和source1两者的不同是在这个source结构体中出现了一个union结构，而这个union结构中数值的不同才导致了类型的不同。
+* 判断是通过两者中都具有的version判断的。
+* source0 因为是处理App内部事件，由app控制所以在结构体中，由三个回调方法指针来作为主体。
+* source1 则由runloop和内核管理由machPort进行驱动所以在基础perform上,还有一个getport返回类型为mach\_port\_t.
+
+bits各位表示意思
+
+| 0 | Signaled标示 | 其他的现在用意不明 |
+| ------ | ------ | ------ |
+
+*******
+
+<pre>
+<code>struct __CFRunLoopObserver {
+    CFRuntimeBase _base;
+    pthread_mutex_t _lock;
+    CFIndex _order;			/* immutable */
+    CFRunLoopObserverContext _context;	/* immutable, except invalidation */
+    -------------------------↑目前不在考虑范围-------------------------------
+    CFRunLoopRef _runLoop;				// 监听的runloop
+    CFIndex _rlCount;					// 这个资源被添加的runloop数量
+    CFOptionFlags _activities;		/* immutable 监听的状态枚举 位操作判断有没有*/
+    CFRunLoopObserverCallBack _callout;	/* immutable */
+};
+
+typedef CF_OPTIONS(CFOptionFlags, CFRunLoopActivity) {
+    kCFRunLoopEntry = (1UL << 0),
+    kCFRunLoopBeforeTimers = (1UL << 1),
+    kCFRunLoopBeforeSources = (1UL << 2),
+    kCFRunLoopBeforeWaiting = (1UL << 5),
+    kCFRunLoopAfterWaiting = (1UL << 6),
+    kCFRunLoopExit = (1UL << 7),
+    kCFRunLoopAllActivities = 0x0FFFFFFFU
+};</code>
+</pre>
+####observer类型
+* 和source一样其实在后面common就会提到，所有资源类型的东西如source、timer、observer都是会被添加到多个runloop中的。而不是单纯的一对一关系。
+
+*******
+
+<pre>
+<code>struct __CFRunLoopTimer {
+    CFRuntimeBase _base;
+    pthread_mutex_t _lock;
+    CFAbsoluteTime _nextFireDate;
+    CFTimeInterval _interval;		/* immutable */
+    CFTimeInterval _tolerance;          /* mutable */
+    uint64_t _fireTSR;			/* TSR units */
+    CFIndex _order;			/* immutable */
+    -------------------------↑目前不在考虑范围-------------------------------
+    uint16_t _bits;						// timer 状态位 比如0位表示是不是发动了
+    CFRunLoopRef _runLoop;				// 这个也有对应的runloop？
+    CFMutableSetRef _rlModes;			// 话说这个如果是mode的set那么上面那个为啥不是？
+    CFRunLoopTimerCallBack _callout;	/* immutable */
+    CFRunLoopTimerContext _context;	/* immutable, except invalidation */
+};</code>
+</pre>
+####Timer类型
+* emmmmm在这里我有个东西不是太懂了 timer会和一个runloop有对应关系吗
+* 而且为什么这个地方存的是modes 但是上面那个observer确是存的runloop的数量呢？不太科学他连modes都不存的？
+
+*********
+
+<pre>
+<code>enum {
+    kCFRunLoopRunFinished = 1,
+    kCFRunLoopRunStopped = 2,
+    kCFRunLoopRunTimedOut = 3,
+    kCFRunLoopRunHandledSource = 4
+};</code>
+</pre>
+####runloopRunInMode() 运行结果类型
+* 这个东西表示这个方法运行完之后runloop的状态
+
+******
 
 好文章好难写啊 我得慢慢写 持续更新。。。
 
