--- a/_posts/2017-08-28-runloop.md
+++ b/_posts/2017-08-28-runloop.md
@@ -64,13 +64,11 @@ tags:
 };</code>
 </pre>
 
-#### runloop主题
+## runloop主题
 * runloop主题和线程有对应关系。
 * 并且保存有多个mode
 * 但是只能存在一个当前mode
 * 但是有commonModes存在，但在实现中并不是这些mode都在运行，而是这些mode的资源都存在于当前的那个mode中。这个在后续的代码分析会进行详细讨论。
-
------
 
 <pre>
 <code>struct __CFRunLoopMode {
@@ -109,7 +107,7 @@ tags:
 };</code>
 </pre>
 
-####mode类型
+##mode类型
 * mode的主要储存依据是_name,所以在逻辑上要保证不同的mode不重名。
 * 资源上主要有source (两种) observer timer 以及和source存在关联的port
 * kCFRunLoopDefaultMode 是一个系统默认的mode
@@ -117,8 +115,6 @@ tags:
 * 但是在网传的dispatch上好像在iOS系统中 是没有关联的但是在MacOSX 确是有关联的，可能和版本有关系。
 * 与mach_port 是不管iOS还是MacOSX都是有关联的，在这一点上不是很理解，难道iOS也有进程通讯吗？
 * 连带着portlist 也就不是很懂了。
-
------
 
 <pre>
 <code>struct __CFRunLoopSource 
@@ -170,7 +166,7 @@ typedef struct {
 #endif
 } CFRunLoopSourceContext1;</code>
 </pre>
-####source类型
+##source类型
 * 主体结构是相同的，因为source0和source1两者的不同是在这个source结构体中出现了一个union结构，而这个union结构中数值的不同才导致了类型的不同。
 * 判断是通过两者中都具有的version判断的。
 * source0 因为是处理App内部事件，由app控制所以在结构体中，由三个回调方法指针来作为主体。
@@ -180,8 +176,6 @@ bits各位表示意思
 
 | 0 | Signaled标示 | 其他的现在用意不明 |
 | ------ | ------ | ------ |
-
------
 
 <pre>
 <code>struct __CFRunLoopObserver {
@@ -206,10 +200,8 @@ typedef CF_OPTIONS(CFOptionFlags, CFRunLoopActivity) {
     kCFRunLoopAllActivities = 0x0FFFFFFFU
 };</code>
 </pre>
-####observer类型
+##observer类型
 * 和source一样其实在后面common就会提到，所有资源类型的东西如source、timer、observer都是会被添加到多个runloop中的。而不是单纯的一对一关系。
-
------
 
 <pre>
 <code>struct __CFRunLoopTimer {
@@ -228,11 +220,9 @@ typedef CF_OPTIONS(CFOptionFlags, CFRunLoopActivity) {
     CFRunLoopTimerContext _context;	/* immutable, except invalidation */
 };</code>
 </pre>
-####Timer类型
+##Timer类型
 * emmmmm在这里我有个东西不是太懂了 timer会和一个runloop有对应关系吗
 * 而且为什么这个地方存的是modes 但是上面那个observer确是存的runloop的数量呢？不太科学他连modes都不存的？
-
------
 
 <pre>
 <code>enum {
@@ -242,10 +232,8 @@ typedef CF_OPTIONS(CFOptionFlags, CFRunLoopActivity) {
     kCFRunLoopRunHandledSource = 4
 };</code>
 </pre>
-####runloopRunInMode() 运行结果类型
+##runloopRunInMode() 运行结果类型
 * 这个东西表示这个方法运行完之后runloop的状态
-
------
 
 好文章好难写啊 我得慢慢写 持续更新。。。
 
