--- a/_posts/2017-08-28-runloop.md
+++ b/_posts/2017-08-28-runloop.md
@@ -45,7 +45,7 @@ tags:
 
 # CFRunlop相关联的结构体解析
 <pre>
-<code>struct __CFRunLoop
+struct __CFRunLoop
 {
 	头、锁、标示、重置所用信息
 	struct _block_item *_blocks_head;
@@ -61,7 +61,7 @@ tags:
 	CFMutableSetRef _commonModeItems;		// 用于在添加common时进行item的放置
 	CFRunLoopModeRef _currentMode;			// 当前Mode
 	CFMutableSetRef _modes;					// 当前mode列表
-};</code>
+};
 </pre>
 
 ## runloop主题
@@ -71,7 +71,7 @@ tags:
 * 但是有commonModes存在，但在实现中并不是这些mode都在运行，而是这些mode的资源都存在于当前的那个mode中。这个在后续的代码分析会进行详细讨论。
 
 <pre>
-<code>struct __CFRunLoopMode {
+struct __CFRunLoopMode {
 	CFRuntimeBase _base;    // 头
 	pthread_mutex_t _lock;	/* must have the run loop locked before locking this   */
 	char _padding[3];
@@ -104,7 +104,7 @@ tags:
     mach_port_t _timerPort;
     Boolean _mkTimerArmed;
 #endif
-};</code>
+};
 </pre>
 
 ##mode类型
