--- a/_posts/2017-08-28-runloop.md
+++ b/_posts/2017-08-28-runloop.md
@@ -44,7 +44,7 @@ tags:
 > 我自己手写了一些注释帮助理解，在这里我们可以发现在runloop结构体中的commonModes中维护了一个mode名称列表。在添加的逻辑上是将commonItem中的东西都添加到目标Mode中，至于mode中的item的存储那是在后续操作中进行的。
 
 # CFRunlop相关联的结构体解析
-<pre>
+``` objective-c
 struct __CFRunLoop
 {
 	头、锁、标示、重置所用信息
@@ -62,7 +62,7 @@ struct __CFRunLoop
 	CFRunLoopModeRef _currentMode;			// 当前Mode
 	CFMutableSetRef _modes;					// 当前mode列表
 };
-</pre>
+```
 
 ## runloop主题
 * runloop主题和线程有对应关系。
@@ -70,7 +70,9 @@ struct __CFRunLoop
 * 但是只能存在一个当前mode
 * 但是有commonModes存在，但在实现中并不是这些mode都在运行，而是这些mode的资源都存在于当前的那个mode中。这个在后续的代码分析会进行详细讨论。
 
-<pre>
+------
+
+``` objective-c
 struct __CFRunLoopMode {
 	CFRuntimeBase _base;    // 头
 	pthread_mutex_t _lock;	/* must have the run loop locked before locking this   */
@@ -105,8 +107,7 @@ struct __CFRunLoopMode {
     Boolean _mkTimerArmed;
 #endif
 };
-</pre>
-
+```
 ##mode类型
 * mode的主要储存依据是_name,所以在逻辑上要保证不同的mode不重名。
 * 资源上主要有source (两种) observer timer 以及和source存在关联的port
@@ -116,8 +117,10 @@ struct __CFRunLoopMode {
 * 与mach_port 是不管iOS还是MacOSX都是有关联的，在这一点上不是很理解，难道iOS也有进程通讯吗？
 * 连带着portlist 也就不是很懂了。
 
-<pre>
-<code>struct __CFRunLoopSource 
+-------
+
+``` objective-c
+struct __CFRunLoopSource 
 {
     CFRuntimeBase _base;
     CFIndex _order;			/* immutable */
@@ -164,8 +167,9 @@ typedef struct {
     void *	(*getPort)(void *info);
     void	(*perform)(void *info);
 #endif
-} CFRunLoopSourceContext1;</code>
-</pre>
+} CFRunLoopSourceContext1;
+```
+
 ##source类型
 * 主体结构是相同的，因为source0和source1两者的不同是在这个source结构体中出现了一个union结构，而这个union结构中数值的不同才导致了类型的不同。
 * 判断是通过两者中都具有的version判断的。
@@ -177,8 +181,10 @@ bits各位表示意思
 | 0 | Signaled标示 | 其他的现在用意不明 |
 | ------ | ------ | ------ |
 
-<pre>
-<code>struct __CFRunLoopObserver {
+-------
+
+``` objective-c
+struct __CFRunLoopObserver {
     CFRuntimeBase _base;
     pthread_mutex_t _lock;
     CFIndex _order;			/* immutable */
@@ -198,13 +204,15 @@ typedef CF_OPTIONS(CFOptionFlags, CFRunLoopActivity) {
     kCFRunLoopAfterWaiting = (1UL << 6),
     kCFRunLoopExit = (1UL << 7),
     kCFRunLoopAllActivities = 0x0FFFFFFFU
-};</code>
-</pre>
+};
+```
 ##observer类型
 * 和source一样其实在后面common就会提到，所有资源类型的东西如source、timer、observer都是会被添加到多个runloop中的。而不是单纯的一对一关系。
 
-<pre>
-<code>struct __CFRunLoopTimer {
+-------
+
+``` objective-c
+struct __CFRunLoopTimer {
     CFRuntimeBase _base;
     pthread_mutex_t _lock;
     CFAbsoluteTime _nextFireDate;
@@ -218,22 +226,26 @@ typedef CF_OPTIONS(CFOptionFlags, CFRunLoopActivity) {
     CFMutableSetRef _rlModes;			// 话说这个如果是mode的set那么上面那个为啥不是？
     CFRunLoopTimerCallBack _callout;	/* immutable */
     CFRunLoopTimerContext _context;	/* immutable, except invalidation */
-};</code>
-</pre>
+};
+```
 ##Timer类型
 * emmmmm在这里我有个东西不是太懂了 timer会和一个runloop有对应关系吗
 * 而且为什么这个地方存的是modes 但是上面那个observer确是存的runloop的数量呢？不太科学他连modes都不存的？
 
-<pre>
-<code>enum {
+------
+
+``` objective-c
+enum {
     kCFRunLoopRunFinished = 1,
     kCFRunLoopRunStopped = 2,
     kCFRunLoopRunTimedOut = 3,
     kCFRunLoopRunHandledSource = 4
-};</code>
-</pre>
+};
+```
 ##runloopRunInMode() 运行结果类型
 * 这个东西表示这个方法运行完之后runloop的状态
+
+-----
 
 好文章好难写啊 我得慢慢写 持续更新。。。
 
